0.22.2 Fix image preview on mobile

--- a/src/ded-components/comments/styles.pcss
+++ b/src/ded-components/comments/styles.pcss
@@ -42,6 +42,10 @@
           text-decoration: none;
           display: flex;
           align-items: center;
+
+          &:hover {
+            color: var(--link) !important;
+          }
         }
       }
 
