--- a/src/ded-components/uploadPreview/styles.pcss
+++ b/src/ded-components/uploadPreview/styles.pcss
@@ -21,7 +21,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: var(--pad-sm) var(--pad-sm) var(--pad-sm) 0;
+    margin-right: var(--pad-sm);
 
     &:hover {
       .deleteButtonContainer {
@@ -56,7 +56,7 @@
     }
 
     .thumbPreview {
-      max-height: 100%;
+      max-height: 67px; /* Bugs out on mobile if 100% */
       display: block;
     }
 
